--- a/src/renderer/assets/mixins/anime.css
+++ b/src/renderer/assets/mixins/anime.css
@@ -1,47 +1,34 @@
-/*======= hover-effect: https://freefrontend.com/css-hover-effects/ =======*/
-
-.hover-bounce {
-  &:hover {
-    animation: bounce 1s;
-  }
+.hover-bounce:hover {
+  animation: bounce 1s;
 }
-
 .hover-popout {
   transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover {
-    transform: translateY(0) scale(1.2);
-  }
 }
-
+.hover-popout:hover {
+  transform: translateY(0) scale(1.2);
+}
 .hover-slide {
-  transition: .4s ease-out;
-
-  &:hover {
-    transform-origin: 0 bottom 0;
-    background-color: #04aec9;
-    transform: scaleY(1);
-  }
+  transition: 0.4s ease-out;
 }
-
+.hover-slide:hover {
+  transform-origin: 0 bottom 0;
+  background-color: #04aec9;
+  transform: scaleY(1);
+}
 @keyframes bounce {
   0%, 20%, 60%, 100% {
     -webkit-transform: translateY(0);
     transform: translateY(0);
   }
-
   40% {
     -webkit-transform: translateY(-20px);
     transform: translateY(-20px);
   }
-
   80% {
     -webkit-transform: translateY(-10px);
     transform: translateY(-10px);
   }
 }
-
-/* 由左邊移到右邊 */
 @keyframes animateX {
   0% {
     transform: translateX(-100%);
@@ -50,8 +37,6 @@
     transform: translateX(300%);
   }
 }
-
-/* 由下面移到上面 */
 @keyframes animateY {
   0% {
     transform: translateY(300%);
@@ -60,3 +45,4 @@
     transform: translateY(-100%);
   }
 }
+
